--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Tailscale Authentication
 # Get your auth key from: https://login.tailscale.com/admin/settings/keys
+# Reusable key is recommended
 TS_AUTH_KEY=tskey-auth-xxxxxxxxx
 TS_HOSTNAME=satisfactory
 TS_EXTRA_ARGS=--accept-routes
@@ -9,4 +10,13 @@ SATISFACTORY_BOT_DISCORD_TOKEN=your_discord_bot_token_here
 
 # Satisfactory Server Settings
 MAXPLAYERS=4
-SEASONAL=false
+
+# User/Group ID (check with `id` command on Linux)
+PGID=1000
+PUID=1000
+
+# Steam Beta (experimental version)
+STEAMBETA=false
+
+# Disable seasonal events (FICSMAS, etc.)
+DISABLESEASONALEVENTS=false
