--- a/compose.yaml
+++ b/compose.yaml
@@ -2,6 +2,7 @@ services:
   satisfactory:
     image: ghcr.io/miyaji255/satisfactory-oucc-server:latest
     container_name: satisfactory-server
+    hostname: satisfactory-server
     restart: unless-stopped
 
     environment:
@@ -15,15 +16,15 @@ services:
 
       # Satisfactory Server
       MAXPLAYERS: ${MAXPLAYERS:-4}
-      SEASONAL: ${SEASONAL:-false}
+      PGID: ${PGID:-1000}
+      PUID: ${PUID:-1000}
+      STEAMBETA: ${STEAMBETA:-false}
+      DISABLESEASONALEVENTS: ${DISABLESEASONALEVENTS:-false}
 
     volumes:
       # Satisfactory server configuration and saves
+      # Contains: /backups, /gamefiles, /logs, /saved
       - ./config:/config
-      # Game server files
-      - ./server-files:/server-files
-      # Server logs
-      - ./logs:/logs
       # Tailscale state (for persistent identity)
       - tailscale-state:/var/lib/tailscale
 
