--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   satisfactory:
-    image: ghcr.io/miyaji255/satisfactory-oucc-server:latest
+    image: ghcr.io/miyaji255/satisfactory-oucc-server:main
     container_name: satisfactory-server
     hostname: satisfactory-server
     restart: unless-stopped
