--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,12 @@ TS_AUTH_KEY=tskey-auth-xxxxxxxxx
 TS_HOSTNAME=satisfactory
 TS_EXTRA_ARGS=--accept-routes
 
+# NetBird Configuration
+# Get your setup key from: https://app.netbird.io/setup-keys
+NB_SETUP_KEY=
+NB_HOSTNAME=satisfactory
+NB_MANAGEMENT_URL=
+
 # Discord Bot Token
 SATISFACTORY_BOT_DISCORD_TOKEN=your_discord_bot_token_here
 
